apps/rust/src/tui/snapshots/prt__tui__live__tests__desc_confirm_publish_multiple_targets_100x30.snap
---
source: src/tui/live.rs
expression: terminal.backend()
---
"◆ prt 4.0.11  ·  desc  ·  Revisão                                                                   "
"descrição pronta  ·  ██████████████████████████████████████████████████████████████████████  ·  100%"
"╭ Body do PR · 159/4000 ✓ ─────────────────────────────────────────────────────────────────────────╮"
"│ # Atualiza fluxo de checkout                                                                   ▲ │"
"│                                                                                                █ │"
"│                                                                                                █ │"
"│ ## Descrição                                                                                   █ │"
"│                                                                                                █ │"
"│ Atualiza o fluxo de checkout para validar o carrinho.                                          █ │"
"│                                                                                                █ │"
"│ ## Checklist   ╭ Confirmar ─────────────────────────────────────────────────────╮              █ │"
"│                │ Criar PR(s) com estes reviewers?                               │              █ │"
"│                │                                                                │              █ │"
"│ ☑ Testes locais│ sprint/110: iohan.hinokuma@ibssystemico.org.br                 │              █ │"
"│                │ dev: ronaldo.pereira@ibssystemico.com.br                       │              █ │"
"│ ☐ Review       │                                                                │              ║ │"
"│                │                          Sim     Não                           │              ║ │"
"│ ╭─ diff        │                                                                │              ║ │"
"│ │ + valida carr│ ←/→ alternar · y sim · n não · enter confirmar · esc voltar    │              ║ │"
"│ │ - ignora erro╰────────────────────────────────────────────────────────────────╯              ║ │"
"│                                                                                                ║ │"
"│ ╰──                                                                                            ║ │"
"│                                                                                                ║ │"
"│                                                                                                ║ │"
"│                                                                                                ▼ │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
"╭ Contexto ────────────────────────────────────────────────────────────────────────────────────────╮"
"│ branch feature/11763-exemplo  ·  work #11763  ·  targets sprint/110, dev                         │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
"←/→ alternar · y sim · n não · enter confirmar · esc voltar                                         "
