apps/rust/src/tui/snapshots/prt__tui__live__tests__desc_content_editor_80x24.snap
---
source: apps/rust/src/tui/live.rs
expression: "$crate :: tui :: snapshot_value(terminal.backend())"
---
"◆ prt <version>  ·  desc  ·  Revisão                                                "
"╭ Editar conteúdo ─────────────────────────────────────────────────────────────╮"
"│ RASCUNHO  ·  Pull Request                                                    │"
"│ Tab muda campo · Enter cria linha no body · setas navegam                    │"
"│ ▸ Título  ·  26 caracteres  ·  EDITANDO                                      │"
"│ ▌ Atualiza fluxo de checkout                                                 │"
"│ ▌                                                                            │"
"│ ──────────────────────────────────────────────────────────────────────────── │"
"│   Body Markdown  ·  159 / 3999 caracteres                                    │"
"│ │ ## Descrição                                                               │"
"│ │ Atualiza o fluxo de checkout para validar o carrinho.                      │"
"│ │                                                                            │"
"│ │ ## Checklist                                                               │"
"│ │ - [x] Testes locais                                                        │"
"│ │ - [ ] Review                                                               │"
"│ │                                                                            │"
"│ │ ```diff                                                                    │"
"│ │ + valida carrinho                                                          │"
"│ │ - ignora erro                                                              │"
"│ │ ```                                                                        │"
"│ │                                                                            │"
"│ Ctrl+S salva · Esc cancela                                                   │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"Tab alterna título/corpo · Ctrl+S salvar · Esc cancelar                         "
