apps/rust/src/tui/snapshots/prt__tui__live__tests__desc_done_100x30.snap
---
source: apps/rust/src/tui/live.rs
expression: terminal.backend()
---
"◆ prt 6.0.1  ·  desc  ·  Concluído                                                                  "
"links disponíveis  ·  █████████████████████████████████████████████████████████████████████  ·  100%"
"╭ PRs publicados ──────────────────────────────────────────────────────────────────────────────────╮"
"│   PR #42  dev  https://dev.azure.com/example/pr/42                                               │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
"t preparar Test Case · q sair                                                                       "
