apps/rust/src/tui/snapshots/prt__tui__live__tests__desc_error_100x30.snap
---
source: src/tui/live.rs
expression: terminal.backend()
---
"◆ prt 6.0.1  ·  desc  ·  Erro                                                                       "
"consulte os detalhes abaixo  ·  █████████████████████░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░  ·  35%"
"╭ Detalhes da operação ────────────────────────────────────────────────────────────────────────────╮"
"│ ✘ Azure DevOps indisponível                                                                      │"
"│                                                                                                  │"
"│ Nenhum PR foi criado antes da falha.                                                             │"
"│ r retorna o erro ao comando · q sai · ? ajuda                                                    │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
"r retornar erro ao comando · q sair · ? ajuda                                                       "
