apps/rust/src/tui/snapshots/prt__tui__live__tests__desc_generating_100x30.snap
---
source: src/tui/live.rs
expression: terminal.backend()
---
"◆ prt 6.0.1  ·  desc  ·  Geração via IA                                                             "
"streaming provider…  ·  ████████████████████████████░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░  ·  42%"
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ # Atualiza checkout                                                                            ▲ │"
"│                                                                                                █ │"
"│ ## Descrição                                                                                   █ │"
"│ ▊                                                                                              █ │"
"│                                                                                                █ │"
"│                                                                                                █ │"
"│                                                                                                █ │"
"│                                                                                                █ │"
"│                                                                                                █ │"
"│                                                                                                █ │"
"│                                                                                                █ │"
"│                                                                                                █ │"
"│                                                                                                █ │"
"│                                                                                                █ │"
"│                                                                                                █ │"
"│                                                                                                █ │"
"│                                                                                                █ │"
"│                                                                                                █ │"
"│                                                                                                █ │"
"│                                                                                                █ │"
"│                                                                                                █ │"
"│                                                                                                █ │"
"│                                                                                                ║ │"
"│                                                                                                ║ │"
"│                                                                                                ▼ │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
"j/k scroll · tab target · ? ajuda · q sair                                                          "
