apps/rust/src/tui/snapshots/prt__tui__live__tests__desc_publishing_100x30.snap
---
source: src/tui/live.rs
expression: terminal.backend()
---
"◆ prt 4.0.11  ·  desc  ·  Publicação                                                                "
"enviando descrição  ·  █████████████████████████████████████░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░  ·  55%"
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"j/k scroll · tab target · ? ajuda · q sair                                                          "
