apps/rust/src/tui/snapshots/prt__tui__live__tests__desc_review_100x30.snap
---
source: src/tui/live.rs
expression: terminal.backend()
---
"● ◆ prt 4.0.11  ·  desc  ·  revisão  ·  0s  ·  ~0 tok  ·  revisão                                   "
" dev                                                                                                "
"╭ ◉ Descrição do PR ────────────────────────────────────╮ ╭ ◈ Contexto ────────────────────────────╮"
"│ # Atualiza fluxo de checkout                        ▲ │ │ branch  feature/11763-exemplo          │"
"│                                                     █ │ │ work    #11763                         │"
"│                                                     █ │ │ targets  dev                           │"
"│ ## Descrição                                        █ │ │ body    161 chars ✓ <4000              │"
"│                                                     █ │ │                                        │"
"│ Atualiza o fluxo de checkout para validar o carrinho█ │ ╰────────────────────────────────────────╯"
"│                                                     █ │                                           "
"│ ## Checklist                                        █ │ ╭ ≡ Log vivo ────────────────────────────╮"
"│                                                     █ │ │ descrição pronta — revise, copie (c) o │"
"│                                                     █ │ │                                        │"
"│ ☑ Testes locais                                     █ │ │                                        │"
"│                                                     █ │ │                                        │"
"│ ☐ Review                                            █ │ │                                        │"
"│                                                     █ │ │                                        │"
"│ ╭─ diff                                             ║ │ │                                        │"
"│ │ + valida carrinho                                 ║ │ │                                        │"
"│ │ - ignora erro                                     ║ │ │                                        │"
"│                                                     ║ │ │                                        │"
"│ ╰──                                                 ║ │ │                                        │"
"│                                                     ║ │ ╰────────────────────────────────────────╯"
"│                                                     ║ │                                           "
"│                                                     ║ │ ╭ ⚡ Progresso 100% ─────────────────────╮" Hidden by multi-width symbols: [(61, " ")]
"│                                                     ║ │ │ ██████████████████████████████████████ │"
"│                                                     ║ │ │ pronto                                 │"
"│                                                     ▼ │ │                                        │"
"╰───────────────────────────────────────────────────────╯ ╰────────────────────────────────────────╯"
"enter publicar · c copiar · tab target · j/k scroll · ? ajuda · q sair                              "
