apps/rust/src/tui/snapshots/prt__tui__live__tests__desc_review_80x24.snap
---
source: src/tui/live.rs
expression: terminal.backend()
---
"◆ prt 4.0.11  ·  desc  ·  Revisão                                               "
"descrição pronta  ·  ██████████████████████████████████████████████████  ·  100%"
"╭ Body do PR · 159/4000 ✓ ─────────────────────────────────────────────────────╮"
"│ # Atualiza fluxo de checkout                                               ▲ │"
"│                                                                            █ │"
"│                                                                            █ │"
"│ ## Descrição                                                               █ │"
"│                                                                            █ │"
"│ Atualiza o fluxo de checkout para validar o carrinho.                      █ │"
"│                                                                            █ │"
"│ ## Checklist                                                               █ │"
"│                                                                            ║ │"
"│                                                                            ║ │"
"│ ☑ Testes locais                                                            ║ │"
"│                                                                            ║ │"
"│ ☐ Review                                                                   ║ │"
"│                                                                            ║ │"
"│ ╭─ diff                                                                    ║ │"
"│ │ + valida carrinho                                                        ▼ │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭ Contexto ────────────────────────────────────────────────────────────────────╮"
"│ branch feature/11763-exemplo  ·  work #11763  ·  targets dev                 │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"e editar · enter publicar · c copiar · tab · j/k · ? ajuda · q sair             "
