apps/rust/src/tui/snapshots/prt__tui__live__tests__desc_reviewers_dialog_100x30.snap
---
source: src/tui/live.rs
expression: terminal.backend()
---
"◆ prt 4.0.11  ·  desc  ·  Revisão                                                                   "
"descrição pronta  ·  ██████████████████████████████████████████████████████████████████████  ·  100%"
"╭ Body do PR · 161/4000 ✓ ─────────────────────────────────────────────────────────────────────────╮"
"│ # Atualiza fluxo de checkout                                                                   ▲ │"
"│                                                                                                █ │"
"│                                                                                                █ │"
"│ ## Descrição                                                                                   █ │"
"│                                                                                                █ │"
"│ Atualiza o fluxo de checkout para validar o carrinho.                                          █ │"
"│                                                                                                █ │"
"│ ## Checklist                                                                                   █ │"
"│              ╭ Reviewers ─────────────────────────────────────────────────────────╮            █ │"
"│              │ opcional; vazio mantém o padrão · tab/↓↑ troca de campo            │            █ │"
"│ ☑ Testes loca│                                                                    │            █ │"
"│              │ ▸ dev                                                              │            █ │"
"│ ☐ Review     │ │ dev@x.com                                                        │            ║ │"
"│              │                                                                    │            ║ │"
"│ ╭─ diff      │ enter avançar · esc voltar                                         │            ║ │"
"│ │ + valida ca╰────────────────────────────────────────────────────────────────────╯            ║ │"
"│ │ - ignora erro                                                                                ║ │"
"│                                                                                                ║ │"
"│ ╰──                                                                                            ║ │"
"│                                                                                                ║ │"
"│                                                                                                ║ │"
"│                                                                                                ▼ │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
"╭ Contexto ────────────────────────────────────────────────────────────────────────────────────────╮"
"│ branch feature/11763-exemplo  ·  work #11763  ·  targets dev                                     │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
"digite o reviewer · tab/↓↑ trocar campo · enter avançar · esc voltar                                "
